Add operation status check and update namespaces
Updated GraphConnector.Api.Queue.http to comment out the existing GET request to the local weather forecast endpoint and add a new GET request to the Windows blog feed.

In Program.cs, replaced GraphConnector.Library.Requests with GraphConnector.Library.Responses. Added FeedUrl property to ConnectionMessage object in /createConnection endpoint. Added new /checkOperationProgress endpoint.

Moved QueueConnectionRequest.cs, QueueContentRequest.cs, and QueueSchemaRequest.cs to GraphConnector.Library.Responses namespace. Added FeedUrl property to QueueConnectionRequest.

In Worker.cs, added Microsoft.Graph.Models and System.Threading.Channels namespaces. Declared new "operations" queue. Updated ExecuteAsync method to handle operation status checks and publish messages to the "operations" queue.

Updated CreateConnector.razor to use GraphConnector.Library.Responses namespace. Added new input field for FeedUrl. Replaced create schema button with check operation status button. Displayed operation status and last checked date. Added CheckOperationStatus method to call new API endpoint.

In GraphConnectorApiClient.cs, replaced GraphConnector.Library.Requests with GraphConnector.Library.Responses. Added CheckOperationprogressAsync method to call new API endpoint.

Added new OperationStatusMessage class to GraphConnector.Library.Messages namespace to represent operation status.

Added new OperationStatusResponse class to GraphConnector.Library.Responses namespace to represent response from operation status check.

--- a/GraphConnector.UI/Components/Pages/CreateConnector.razor
+++ b/GraphConnector.UI/Components/Pages/CreateConnector.razor
@@ -2,7 +2,7 @@
 
 @inject IConfiguration configuration
 @inject GraphConnectorApiClient apiClient
-@using GraphConnector.Library.Requests
+@using GraphConnector.Library.Responses
 @using GraphConnector.UI.Services
 @rendermode InteractiveServer
 
@@ -22,30 +22,30 @@
     <label for="ConnectorId">Connector Id</label>
     <input type="text" id="ConnectorId" @bind="ConnectorId" />
 </div>
+<div>
+    <label for="FeedUrl">Feed Url</label>
+    <input type="text" id="FeedUrl" @bind="FeedUrl" />
+</div>
 
 <br />
 <p>
     <button class="btn btn-primary" @onclick="CreateGraphConnector">Create Connector</button>
 </p>
-<p>
-    <button class="btn btn-primary" @onclick="CreateSchema">Create Schema</button>
-</p>
-
-<div>
-    <label for="FeedUrl">Feed Url</label>
-    <input type="text" id="FeedUrl" @bind="FeedUrl" />
-</div>
 <br />
 <p>
-    <button class="btn btn-primary" @onclick="UploadContent">Upload Content</button>
+    <button class="btn btn-primary" @onclick="CheckOperationStatus">Check operation status</button>
 </p>
+<div>
+    Operation status: @OperationStatus - Last checked: @LastStatusDate
+</div>
 
 @code {
     private string ConnectorName;
     private string ConnectorDescription;
     private string ConnectorId;
     private string FeedUrl;
-
+    private string OperationStatus;
+    private DateTimeOffset LastStatusDate;
 
     private async Task CreateGraphConnector()
     {
@@ -54,7 +54,8 @@
                 Action = "create",
                 ConnectorId = ConnectorId,
                 ConnectorName = ConnectorName,
-                ConnectorDescription = ConnectorDescription
+                ConnectorDescription = ConnectorDescription,
+                FeedUrl = FeedUrl
             };
 
         await apiClient.QueueConnectionRequestAsync(request);
@@ -81,5 +82,12 @@
         };
 
         await apiClient.QueueContentRequestAsync(request);
+    }
+
+    public async Task CheckOperationStatus()
+    {
+        var result = await apiClient.CheckOperationprogressAsync();
+        OperationStatus = result.Status;
+        LastStatusDate = result.LastStatusDate;
     }
 }
